feat(build): use chainguard jre:latest-dev base image for docker healthcheck support (#882)
Resolves #784, supercedes #811.